@@ -1,25 +1,24 @@
 package com.westernhills.westernhills.controller.admincontroller;
 
 
-import com.westernhills.westernhills.dto.CouponDTO;
+import com.westernhills.westernhills.entity.admin.Category;
+import com.westernhills.westernhills.entity.admin.CategoryCoupon;
 import com.westernhills.westernhills.entity.admin.ProductCoupon;
 import com.westernhills.westernhills.entity.admin.Product;
-import com.westernhills.westernhills.entity.admin.UseCoupon;
+import com.westernhills.westernhills.repo.CategoryRepository;
 import com.westernhills.westernhills.repo.CouponRepository;
 import com.westernhills.westernhills.repo.ProductRepository;
-import com.westernhills.westernhills.repo.UseCouponRepository;
-import com.westernhills.westernhills.service.CouponService;
-import com.westernhills.westernhills.service.UseCouponService;
+import com.westernhills.westernhills.service.coupon.CategoryCouponService;
+import com.westernhills.westernhills.service.coupon.CouponService;
+import com.westernhills.westernhills.service.coupon.UseCouponService;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.ModelAttribute;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestParam;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Controller
 public class CouponController {
@@ -40,11 +39,6 @@ public class CouponController {
 
 
 
-
-    @Autowired
-    private UseCouponRepository useCouponRepository;
-
-
     @Autowired
     private CouponService couponService;
 
@@ -54,7 +48,7 @@ public class CouponController {
         List<Product> products=productRepository.findAll()
                 .stream()
                 .filter(product -> !product.isDeleted())
-                .toList();
+                .collect(Collectors.toList());
         model.addAttribute("products", products);
         System.out.println(products);
         return "admin/Coupon-add";
@@ -62,26 +56,17 @@ public class CouponController {
 
 
 
+
+
+
     @GetMapping("/addCoupon")
     public String addCoupon(@ModelAttribute ProductCoupon coupon){
+        System.out.println("hii");
         couponService.createCoupon(coupon);
         return "redirect:/ShowAddCoupons";
     }
 
 
-
-
-
-    @GetMapping("/couponAdd")
-    public String addCouponAdd(@ModelAttribute CouponDTO couponDTO,
-                               @AuthenticationPrincipal(expression = "username") String username) {
-        String coupon = couponDTO.getCoupon();
-
-
-
-        useCouponService.discountProduct(coupon, username);
-        return "redirect:/cartShow";
-    }
 
 
 
@@ -93,7 +78,7 @@ public class CouponController {
         List<ProductCoupon> coupons = couponRepository.findAll()
                         .stream()
                                 .filter(coupon -> !coupon.isDeleted())
-                                        .toList();
+                                        .collect(Collectors.toList());
 
         model.addAttribute("coupons", coupons);
 
